recaptcha-v3-with-library: improvements login

--- a/recaptcha-v3-with-library/src/app/auth/login/login.component.html
+++ b/recaptcha-v3-with-library/src/app/auth/login/login.component.html
@@ -1,4 +1,5 @@
-<mat-card>
+<div class="login-container">
+  <mat-card>
     <form [formGroup]="loginForm" autocomplete="off">
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
@@ -18,4 +19,5 @@
         <span>Entrar</span>
       </button>
     </form>
-</mat-card>
+  </mat-card>
+</div>
