--- a/recaptcha-v3-with-library/src/app/auth/login/login.component.scss
+++ b/recaptcha-v3-with-library/src/app/auth/login/login.component.scss
@@ -2,13 +2,22 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 600px;
 }
 
 .mat-form-field {
   max-width: 300px !important;
+  margin: 10px;
 }
 
 mat-card {
   max-width: 600px;
-  margin: 20px;
+  margin: 0;
+}
+
+.login-container {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
